; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/parseutil/extr_dcfd.c_pr_timeval.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/parseutil/extr_dcfd.c_pr_timeval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }

@pr_timeval.buf = internal global [20 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [10 x i8] c"%c0.%06ld\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"%ld.%06ld\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.timeval*)* @pr_timeval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @pr_timeval(%struct.timeval* %0) #0 {
  %2 = alloca %struct.timeval*, align 8
  store %struct.timeval* %0, %struct.timeval** %2, align 8
  %3 = load %struct.timeval*, %struct.timeval** %2, align 8
  %4 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %20

7:                                                ; preds = %1
  %8 = load %struct.timeval*, %struct.timeval** %2, align 8
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp slt i64 %10, 0
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i32 45, i32 43
  %14 = sext i32 %13 to i64
  %15 = load %struct.timeval*, %struct.timeval** %2, align 8
  %16 = getelementptr inbounds %struct.timeval, %struct.timeval* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = call i64 @l_abs(i64 %17)
  %19 = call i32 @snprintf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @pr_timeval.buf, i64 0, i64 0), i32 20, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i64 %14, i64 %18)
  br label %29

20:                                               ; preds = %1
  %21 = load %struct.timeval*, %struct.timeval** %2, align 8
  %22 = getelementptr inbounds %struct.timeval, %struct.timeval* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.timeval*, %struct.timeval** %2, align 8
  %25 = getelementptr inbounds %struct.timeval, %struct.timeval* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = call i64 @l_abs(i64 %26)
  %28 = call i32 @snprintf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @pr_timeval.buf, i64 0, i64 0), i32 20, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i64 %23, i64 %27)
  br label %29

29:                                               ; preds = %20, %7
  ret i8* getelementptr inbounds ([20 x i8], [20 x i8]* @pr_timeval.buf, i64 0, i64 0)
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i64, i64) #1

declare dso_local i64 @l_abs(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
